# busylight

./: .coderabbit.yml  LICENSE  README.md  firmware_rust.hex
.github/workflows/: ci.yml
firmware/: .gitignore  Cargo.toml  README.md
firmware/application/: Cargo.toml  README.md  TODO.md
firmware/application/.cargo/: config.toml
firmware/application/crates/async-button-rtic/: Cargo.toml
firmware/application/crates/async-button-rtic/src/: config.rs  lib.rs
firmware/application/crates/neopixel-spi-encoder/: Cargo.toml
firmware/application/crates/neopixel-spi-encoder/src/: lib.rs
firmware/application/firmware/: Cargo.toml  TODO.md
firmware/application/firmware/.cargo/: config.toml
firmware/application/firmware/secrets/: README.md  key.sec
firmware/application/firmware/src/: led_statemachine.rs  main.rs  panic_handler.rs  uart_logger.rs
firmware/application/secrets/: README.md
firmware/application/src/: led_statemachine.rs  main.rs  usb_utils.rs
firmware/bootloader/: Cargo.toml  build.rs  memory.x
firmware/bootloader/.cargo/: config.toml
firmware/bootloader/secrets/: key.pub  key.pub.raw
firmware/bootloader/src/: main.rs
firmware/busylight/: README.md  busylight.code-workspace  west.yml
firmware/busylight/app/: CMakeLists.txt  prj.conf  sysbuild.conf
firmware/busylight/app/keys/: signing-key-ed25519.pem
firmware/busylight/app/src/: main.c
firmware/busylight/app/sysbuild/: mcuboot.conf
firmware/busylight/bsp/: Kconfig
firmware/busylight/bsp/boards/finomnis/busylight/: board.cmake  busylight.dts
firmware/busylight/zephyr/: module.yml
firmware/core/: Cargo.toml
firmware/core/src/: lib.rs  neopixel.rs
firmware_rust/: Cargo.toml
firmware_rust/.cargo/: config.toml
firmware_rust/src/: main.rs
firmware_zephyr/busylight/: .clang-format  README.md  busylight.code-workspace  west.yml
firmware_zephyr/busylight/app/: CMakeLists.txt  sysbuild.conf
firmware_zephyr/busylight/app/keys/: encryption-key-x25519.pem
firmware_zephyr/busylight/app/src/: main.c
firmware_zephyr/busylight/bsp/: CMakeLists.txt
firmware_zephyr/busylight/bsp/boards/finomnis/busylight/: Kconfig.busylight  board.yml  busylight.dts  busylight_defconfig
software/: Cargo.toml
software/application/: Cargo.toml  memory.x
software/bootloader/: Cargo.toml
software/bootloader/src/: main.rs
software/firmware/: Cargo.toml
software/firmware/.cargo/: config.toml
software/src/: lib.rs
