[package]
name = "busylight"
version = "0.4.0"
edition = "2024"

[dependencies]
# lib
hidapi = "2.6.5"

# busylight-tray
tao = "0.35.2"
tray-icon = "0.24.0"
image = { version = "0.25.10", default-features = false, features = [
    "png",
    "webp",
] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "CFRunLoop",
] }
