[workspace]
resolver = "3"
members = ["crates/neopixel-spi-encoder", "firmware"]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Finomnis/busylight"
publish = false

[profile.release]
# Allows defmt to display log locations even in release
debug = true
