[workspace]
resolver = "3"
members = [
    "crates/async-button-rtic",
    "crates/neopixel-spi-encoder",
    "firmware",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Finomnis/busylight"
publish = false

[profile.release]
# Allows defmt to display log locations even in release
debug = true

[workspace.dependencies]

# Project internal dependencies
neopixel-spi-encoder = { path = "./crates/neopixel-spi-encoder" }
async-button-rtic = { path = "./crates/async-button-rtic" }

# Base Cortex-M dependencies
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
critical-section = "1.2.0"

# Panic behavior
panic-probe = "1.0.0"

# Logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"
log = "0.4.29"
bbqueue = "0.7.0"

# RTIC
rtic = "2.1.0"
rtic-sync = "1.0.2"
rtic-time = { version = "2.0.1", git = "https://github.com/Finomnis/rtic", branch = "stm32u0" }
rtic-monotonics = { version = "2.1.0", git = "https://github.com/Finomnis/rtic", branch = "stm32u0" }

# HAL drivers
embassy-stm32 = "0.6.0"
embassy-usb = { version = "0.6.0", default-features = false }

# HAL abstraction definitions
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

# Other
fugit = "0.3.9"
cfg-if = "1.0.0"
