[package]
name = "busylight-bootloader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true


[dependencies]
defmt = { workspace = true, optional = true }
defmt-rtt = { workspace = true, optional = true }
panic-probe = { workspace = true, features = ["print-defmt"], optional = true }

embassy-stm32 = { workspace = true, features = ["stm32u073cc"] }
embassy-boot-stm32 = { workspace = true }
cortex-m = { workspace = true, features = [
    "inline-asm",
    "critical-section-single-core",
] }
embassy-sync.workspace = true
cortex-m-rt.workspace = true
embedded-storage.workspace = true
embedded-storage-async.workspace = true
cfg-if.workspace = true
embassy-usb-dfu = { workspace = true, features = ["dfu", "cortex-m"] }
embassy-usb = { workspace = true, default-features = false }
embassy-futures.workspace = true
static_cell.workspace = true
portable-atomic = { workspace = true, features = ["critical-section"] }

[features]
# default = ["verify"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-boot-stm32/defmt",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
    "embassy-usb-dfu/defmt",
]
verify = ["embassy-usb-dfu/ed25519-salty"]
