[package]
edition = "2024"
name = "busylight-bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-stm32 = { version = "0.6.0", features = ["stm32u073cc"] }
embassy-boot-stm32 = { version = "0.8.0" }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
embassy-sync = { version = "0.8.0" }
cortex-m-rt = { version = "0.7.5" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
cfg-if = "1.0.4"
embassy-usb-dfu = { version = "0.3.0", features = ["dfu", "cortex-m"] }
embassy-usb = { version = "0.6.0", default-features = false }
embassy-futures = { version = "0.1.2" }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-stm32/defmt",
    "embassy-stm32/defmt",
    "embassy-usb/defmt",
    "embassy-usb-dfu/defmt",
]
verify = ["embassy-usb-dfu/ed25519-salty"]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = true
