[package]
name = "busylight"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true


[[bin]]
name = "busylight"
path = "src/bin/busylight.rs"
test = false


[dependencies]
# Project internal dependencies
neopixel-spi-encoder = { path = "../crates/neopixel-spi-encoder" }
async-button-rtic = { path = "../crates/async-button-rtic" }

# Base Cortex-M dependencies
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"

# Panic behavior
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"

# RTIC
rtic = { version = "2.1.1", features = ["thumbv6-backend", "rtic-monotonics"] }
rtic-sync = "1.0.2"
rtic-monotonics = { version = "2.1.0", git = "https://github.com/Finomnis/rtic", branch = "stm32-metapac-features", features = [
    "stm32u073cc",
    "stm32_tim3",
] }
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

# HAL drivers
embassy-stm32 = { version = "0.6.0", features = [
    "defmt",
    "unstable-pac",
    "stm32u073cc",
    "exti",
    "chrono",
] }
embassy-usb = { version = "0.6.0", default-features = false, features = [
    "defmt",
] }

# HAL abstraction definitions
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

# Other, user required
micromath = "2.0.0"
chrono = { version = "0.4.38", default-features = false }
