[package]
name = "busylight"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true


[[bin]]
name = "busylight"
path = "src/main.rs"
test = false


[dependencies]
# Project internal dependencies
neopixel-spi-encoder.workspace = true
async-button-rtic.workspace = true

# Base Cortex-M dependencies
cortex-m = { workspace = true, features = ["critical-section-single-core"] }
cortex-m-rt.workspace = true

# Logging
log.workspace = true
bbqueue.workspace = true

# RTIC
rtic = { workspace = true, features = ["thumbv6-backend"] }
rtic-monotonics = { workspace = true, features = ["stm32u073cc", "stm32_tim2"] }
rtic-sync.workspace = true
futures = { workspace = true, features = ["async-await"] }
portable-atomic = { version = "1", features = ["critical-section"] }

# HAL drivers
embassy-stm32 = { workspace = true, features = [
    "unstable-pac",
    "stm32u073cc",
    "exti",
    "time-driver-tim3",
] }
embassy-time = { workspace = true, features = [
    "generic-queue-8",
    "tick-hz-32_000",
] }
embassy-usb.workspace = true
embassy-usb-dfu = { workspace = true, features = ["application", "cortex-m"] }
embassy-boot-stm32.workspace = true
embassy-sync.workspace = true
embassy-embedded-hal.workspace = true

# HAL abstraction definitions
embedded-hal.workspace = true
embedded-hal-async.workspace = true
embedded-storage.workspace = true

# Other
static_cell.workspace = true
git-version.workspace = true
